# conda-build-tools

./: .gitignore  .gitmodules  .travis.yml  MANIFEST.in  README.md  README.rst  appveyor.yml  build_bdist.bat  build_bdist.sh  requirements.txt  requirements.yml  setup.cfg  setup.py
affiliate-builder/: build_recipes.py  check_build_results.py  core.py  generate_initial_versions.py  prepare_packages.py  upload_bdists.py
extruder/: conda_forge_feedstock_cloner.py  copy_packages.py  extrude_packages.py  extrude_recipes.py  extrude_template.py  prepare_packages.py  version.py
extruder.recipe/: bld.bat  meta.yaml
extruder/tests/: test_channel_copy.py
package-extruder/data/: appveyor.yml
recipe_tamplates/astroml/: meta.yaml
recipe_tamplates/gammapy/: meta.yaml
recipe_tamplates/montage-wrapper/: meta.yaml
recipe_tamplates/sncosmo/: build.sh
recipe_tamplates/wcsaxes/: meta.yaml
recipe_templates/asdf/: meta.yaml
recipe_templates/astroml/: bld.bat  meta.yaml
recipe_templates/astroquery/: bld.bat  build.sh  meta.yaml
recipe_templates/astroscrappy/: bld.bat  meta.yaml  windows_patch.diff
recipe_templates/gammapy/: meta.yaml
recipe_templates/ginga/: meta.yaml
recipe_templates/imexam/: extra.yml  meta.yaml  meta.yml
recipe_templates/iminuit/: meta.yaml
recipe_templates/naima/: bld.bat  build.sh
recipe_templates/omnifit/: meta.yaml
recipe_templates/pyregion/: meta.yaml
recipe_templates/python-cpl/: meta.yaml
recipe_templates/reproject/: meta.yaml  windows_patch.diff
recipe_templates/sncosmo/: bld.bat  meta.yaml
(+5 files in other folders)
