[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = False

[metadata]
package_name = extruder
description = A couple of scripts for automating conda builds.
long_description = Build conda packages.
author = Matthew Craig
author_email = mattwcraig@gmail.com
license = BSD
url = https://github.com/astropy/conda-build-tools
edit_on_github = False
github_project = astropy/conda-build-tools

[entry_points]
extrude_recipes = extruder.extrude_recipes:main
extrude_template = extruder.extrude_template:main
copy_packages = extruder.copy_packages:main
